# python-fast-api-starter

./: README.md  pyproject.toml
src/python_fast_api/: __init__.py  main.py
