[project]
name = "python-fast-api"
version = "0.1.0"
description = "A fastapi service project"
authors = [
    { name = "Mishal", email = "mishaal79@gmail.com" }
]
dependencies = [
    "fastapi>=0.110.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_fast_api"]
